--- a/Boletin1_TD/BoletinTema1ALUMNO.Rmd
+++ b/Boletin1_TD/BoletinTema1ALUMNO.Rmd
@@ -123,12 +123,8 @@ nombre_filas_columnas(Animals2)
 d.  Usa la función **intersect** y almacena en la variable *commonAnimals* los aminales que aparezcan en ambos conjuntos
 
 ```{r}
-
-
-
-
-
-
+commonAnimals=intersect(mammals, Animals2)
+commonAnimals
 ```
 
 e.  Usa **setdiff** para averiguar qué animales no están en ambos conjuntos. ¿Cuántos son ?. ¿Qué tipo de animales son?
