--- a/Boletin1_TD/BoletinTema1ALUMNO.Rmd
+++ b/Boletin1_TD/BoletinTema1ALUMNO.Rmd
@@ -153,8 +153,14 @@ e.  Determina las diferencia entre los animales que no aparecen en ambos conjunt
 2.  La funcion **qqPlot** del paquete **car** puede ser utilizada para determinar gráficamente si una serie de puntos siguen una distribución de datos Gaussiana. Si las muestras están dentro de las líneas discontinuas podemos indicar que siguen una distribución Gaussiana con un 95 % de confianza. Utilizando esta función representa el logaritmo neperiano (**log**) del peso del cerebro (**brain weigths**) del registro de datos **mammals** del paquete **MASS** y conjunto de datos **Animals2** de la librería **robustbase**. ¿Presentan el mismo comportamiento ?.¿Podríamos decir que siguen una distribución Gaussiana ?
 
 ```{r}
+library(car)
+library(MASS)
+library(robustbase)
 
+qqPlot(log(a$brain))
+qqPlot(log(b$brain))
 
+#Los datos se encuentran dentro de las lineas discontinuas, paor, tanto, sí que cumplen la distribucion gaussiana. Y ambas funciones tienen un compaortamiento realmente parecido
 ```
 
 3.  La función **library** sin argumentos abre una ventana y muestra las librerías que han sido instaladas.
