--- a/Boletin1_TD/BoletinTema1ALUMNO.Rmd
+++ b/Boletin1_TD/BoletinTema1ALUMNO.Rmd
@@ -201,6 +201,11 @@ str(c)
 
 glimpse(c)
 
+is.na(c)
+colSums(is.na(c))
+sum(is.na(c))
+all(is.na(c)==FALSE)
+#No hay ningun valor perdido
 ```
 
 5.  Muchas pruebas estadísticas suponen que los datos siguen una distribución Gaussiana. Utiliza la aproximación visual proporcionada por **qqPlot** para determinar si podemos asumir que las variables **HeadWt** y **VitC** del conjunto **cabbages** verifican esta condición.
