--- a/Boletin1_TD/BoletinTema1ALUMNO.Rmd
+++ b/Boletin1_TD/BoletinTema1ALUMNO.Rmd
@@ -231,11 +231,10 @@ summary(d) #Es verdad
 5.  Muchas pruebas estadísticas suponen que los datos siguen una distribución Gaussiana. Utiliza la aproximación visual proporcionada por **qqPlot** para determinar si podemos asumir que las variables **HeadWt** y **VitC** del conjunto **cabbages** verifican esta condición.
 
 ```{r}
+qqPlot(cabbages$HeadWt)
+qqPlot(cabbages$VitC)
 
-
-
-
-
+#Ambas variables verifican esta condicion
 ```
 
 6.  Una representación habitual, para determinar la distribución de los datos de una variable cuantitativa es el histograma (**hist**). Determina, de forma aproximada, utilizando el histograma, si hay diferencias entre los contenidos de vitamina C (**VitC**), para las diferentes variedades de calabaza (variable **Cult**), en el conjunto de datos **cabbages**.
